--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,7 @@
 = FLINK PROMETHEUS SOURCE
 
 == STATUS
-
-[![Java CI with Maven](https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml/badge.svg?branch=main)](https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml)
+image:https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml/badge.svg[https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml]
 
 == WHAT IS THIS FOR?
 
