--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = FLINK PROMETHEUS SOURCE
 
 == STATUS
-image:https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml/badge.svg[https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml]
+image:https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml/badge.svg[link="https://github.com/ivanas93/prometheus-source-flink/actions/workflows/maven.yml"]
 
 == WHAT IS THIS FOR?
 
